# rust-game

./: Cargo.toml  build.rs
assets/shaders/: triangle.vert
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
render_gl_derive/: Cargo.toml
render_gl_derive/src/: lib.rs
src/: camera.rs  debug.rs  main.rs  mvp_matrix.rs  resources.rs  triangle.rs
src/glm_ext/: cached_matrix.rs  mod.rs
src/render_gl/: buffer.rs  color_buffer.rs  mod.rs  shader.rs  viewport.rs
