[package]
name = "game"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
walkdir = "2.1"

[dependencies]
sdl2 = { version = "0.33.0", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }
failure = "0.1"
render_gl_derive = { path="render_gl_derive" }
vec-2-10-10-10 = "0.1.2"
half = "1.7.1"
nalgebra = "0.16"
nalgebra-glm = "0.3"

[features]
gl_debug = ["gl/debug"]

